--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ a {
     padding: 50px;
     color: white;
     text-align: center;
-    background-image: url("FXFD.png");
+    background-image: url("Img/FXFD.png");
     background-size: cover;
 }
 
