--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ section {
 /* p {
     display:flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;N
 } */
 
 .tracking {
