--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,21 @@
     justify-content: center;
 } */
 
-nav ul {
+header {
+    background:rgb(79 10 145);
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+}
+
+ul {
     text-decoration: none;
     list-style-type: none;
-    background: rgb(103, 12, 189);
     display: flex;
-    /* flex-direction: column; */
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1.5rem;
 }
 
 /* .navbar, .nav-items {
@@ -30,16 +36,22 @@ nav ul {
 a {
     display: flex;
     flex-direction: column-reverse;
+    font-family: 'Trebuchet MS';
     color: white;
     text-decoration: none;
-    /* background-color: rgb(103, 12, 189); */
     padding: 0px;
     margin: 5px;
 }
 
-/* h1 {
-    display: block;
-} */
+.Logo {
+    width: 90px;
+    height: 80px;
+    padding-right: 50px;
+}
+
+.sign-up {
+    padding-left: 40px;
+}
 
 .top {
     /* display: flex;
@@ -51,10 +63,20 @@ a {
     background-size: cover;
 }
 
+h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
 section {
     display: flex;
     justify-content: center;
     padding: 30px;
+}
+
+input {
+    border-style: none;
+    margin-right: 2.5px;
+    padding: 0px 40px 0px 5px;
 }
 
 .main-1 {
@@ -65,8 +87,12 @@ section {
     align-items: center;
 }
 
-.p1, .p2, .p3 {
+.p1, .p3 {
     padding: 15px;
+}
+
+.p2 {
+    padding: 10px;
 }
 
 /* .box-1, .box-2, .box-3 {
@@ -84,14 +110,18 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 28px;
+    margin-top: 15px;
 }
 
 .box-2 {
     width: 180px;
-    height: 175px;
+    height: 160px;
     color: #fff;
-    background-color: blueviolet;
+    background-color: rgb(79 10 145);
+}
+
+.track {
+    padding-top: 32px;
 }
 
 /* .main-1 {
@@ -135,11 +165,11 @@ section {
 }
 
 .btn {
-    width: min-content;
-    height: min-content;
-    background-color: orange;
+    width: 70px;
+    background-color: #ff6c00;
     display: flex;
-    padding: 20px;
+    justify-content: center;
+    padding: 10px;
 }
 
 .icon1, .icon2, .icon3, .icon4, .icon5 {
@@ -149,6 +179,7 @@ section {
 
 .help {
     font-family: verdana;
+    padding-top: 5px;
 }
 
 img {
@@ -172,11 +203,31 @@ img {
     align-items: center; */
 }
 
-/*.span-1, .span-2 {
+.scndSection {
     display: flex;
-    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+}
 
-}*/
+.schedule {
+    /* height: fit-content; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.span-2 {
+    color: rgb(47, 116, 177);
+    padding: 10px;
+}
+
+/* .sec-2-content {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+} */
 
 h2 {
     padding: 30px;
@@ -186,5 +237,5 @@ h2 {
 footer {
     padding: 20px 20px 20px 10px;
     color: #fff;
-    background: rgb(103, 12, 189);
+    background:rgb(79 10 145);
 }
