--- a/styles.css
+++ b/styles.css
@@ -56,12 +56,10 @@ a {
 }
 
 .top {
-    /* display: flex;
-    flex-direction: column; */
-    padding: 50px;
+    padding: 50px 50px 10px;
     color: white;
     text-align: center;
-    background-image: url("Img/FXFD.png");
+    background-image: url("Img/FedEx.webp");
     background-size: cover;
 }
 
@@ -78,6 +76,8 @@ h1 {
 
 
 input {
+    width: 400px;
+    height: 60px;
     border-style: none;
     margin-right: 2.5px;
     padding: 0px 40px 0px 5px;
@@ -85,10 +85,25 @@ input {
 
 .main-1 {
     font-family: verdana;
+    margin: 0% 15%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.main-2 {
+    margin: 0% 15%;
+    background-color: rgb(248 246 246 / 83%);
+}
+
+.main-3 {
+    margin-top: 2%;
+    background-color: rgb(248 246 246 / 83%);
+}
+
+.about {
+    margin: 0% 15%;
 }
 
 .p1, .p3 {
@@ -153,10 +168,11 @@ input {
 }
 
 .btn {
-    width: 70px;
+    width: 100px;
     background-color: #ff6c00;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 10px;
 }
 /* :hover submit {
@@ -170,7 +186,7 @@ input {
 
 .help {
     font-family: verdana;
-    padding-top: 5px;
+    padding-top: 7px;
 }
 
 img {
