--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ a {
 }
 
 h1 {
-    color: aqua;
+    color: white;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
@@ -94,7 +94,7 @@ input {
 
 .main-2 {
     margin: 0% 15%;
-    background-color: rgb(248 246 246 / 83%);
+    background-color: rgb(248, 246, 246);
 }
 
 .main-3 {
@@ -104,6 +104,11 @@ input {
 
 .about {
     margin: 0% 15%;
+    padding-top: 50px;
+}
+
+.aboutInfo {
+    display: flex;
 }
 
 .p1, .p3 {
@@ -215,11 +220,11 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    padding: 30px;
 }
 
 .schedule {
-    /* height: fit-content; */
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -242,16 +247,31 @@ h2 {
     text-align: center;
 }
 
+.fa {
+    height: 30px;
+    width: 30px;
+    border-radius: 90%;
+    text-align: center;
+    background: aquamarine;
+}
+
+.social-links {
+    display: flex;
+    padding-bottom: 50px;
+}
+
 footer {
     display: flex;
     padding: 20px 20px 20px 10px;
     color: #fff;
     background:rgb(79 10 145);
 }
+
 .foot-link {
     padding: 0px;
 }
 .copyright {
     padding-top: 10px;
     padding-right: 50%;
+    font-size: small;
 }
