--- a/styles.css
+++ b/styles.css
@@ -257,10 +257,13 @@ h2 {
 }
 
 .fa {
+    box-sizing: border-box;
     height: 30px;
     width: 30px;
-    padding:10px;
-    border-radius: ;
+    margin: 5px;
+    padding:6px;
+    border: 1px solid rgb(207, 205, 205);
+    border-radius: 100%;
     text-align: center;
     background: aquamarine;
 }
