--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ input {
     width: 160px;
     height: 140px;
     color: #000;
-    background-color: white;
+    background-color: #fcfcfc;
     box-sizing: content-box;
     border: 50px;
     display: flex;
@@ -227,20 +227,29 @@ img {
 .schedule {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
     /* text-align: center; */
     /* padding-right: 2px; */
 }
 
-/* .schedule2 {
+.schedule2 {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding-left: 2px;
-} */
+    justify-content: center;
+    /* align-items: center; */
+    /*padding-left: 2px;*/
+}
+
+.sec-2-content1 {
+    margin-right: 8px;
+}
+
+.sec-2-content2 {
+    margin-left: 8px;
+}
 
 .span-2 {
+    padding: 10px;
     color: rgb(47, 116, 177);
 }
 
