--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     /* box-sizing: border-box; */
+    font-family: verdana;
 }
 
 /* header {
@@ -270,7 +271,7 @@ h2 {
     height: 30px;
     width: 30px;
     margin: 5px;
-    padding:6px;
+    padding:5.5px;
     border: 1px solid rgb(207, 205, 205);
     border-radius: 100%;
     text-align: center;
