--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,7 @@ img {
 }
 
 .schedule2 {
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -250,7 +251,7 @@ img {
 }
 
 .span-2 {
-    padding: 10px;
+    padding: 10px 0px;
     color: rgb(47, 116, 177);
 }
 
@@ -260,6 +261,11 @@ img {
     /* justify-content: center;
     align-content: center;*/
 } 
+
+.money-back {
+    width: 50%;
+    margin: 2% 15%;
+}
 
 h2 {
     padding: 30px;
